# captcha_proj

./: .env.example  .gitignore  README.md  README.txt  main.py  pyproject.toml
dashboard/backend/: app.py
dashboard/data/: cluster_meta.json  cluster_profiles.json
dashboard/frontend/: game.html  game.js  game.wasm  game_old.html  index.html
dashboard/frontend/css/: components.css  layout.css  shared.css  tokens.css  viz.css
dashboard/frontend/js/: config.js  dashboard.js  filters.js  radar.js  scatter.js  state.js  svg_icons.js  trajectory.js  trajectory_old.js
notebook/: CaptchaSolve.ipynb
