[project]
name = "cse6242-captcha"
version = "0.1.0"
description = "CAPTCHA Behavioral Segmentation — CSE 6242 Team 165"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Data / ML
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "datasets>=2.19",
    "fastparquet>=2024.2.0",
    # Visualization (notebook)
    "matplotlib>=3.8",
    "seaborn>=0.13",
    # Jupyter
    "ipykernel>=6.29",
    "jupyter>=1.0",
    # Backend API
    "flask>=3.0",
    "flask-cors>=4.0",
    "kneed>=0.8.6",
    "nbconvert[webpdf]>=7.17.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
